codigo/8-funciones/error_global.out
  File "<stdin>", line 2
    global z = 3
             ^
SyntaxError: invalid syntax